# tablecodec

./: .gitignore  .markdownlint-cli2.yaml  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  justfile  mise.toml  pyproject.toml  pyrightconfig.json  ruff.toml  semgrep.yaml
.github/: dependabot.yml
.github/workflows/: benchmark.yaml  ci.yaml  release.yaml
.semgrep/: README.md
.semgrep/rules/core-deps/: tablecodec-no-third-party-imports-in-core.py  tablecodec-no-third-party-imports-in-core.yaml
.semgrep/rules/streaming/: tablecodec-no-full-file-read.py  tablecodec-no-full-file-read.yaml
.semgrep/rules/typing/: tablecodec-no-untagged-type-ignore.py  tablecodec-no-untagged-type-ignore.yaml
conformance/: INDEX.json  README.md
conformance/expectations/doctags-tables/: 001_simple.ir.json
conformance/expectations/fintabnet/: 001_simple.ir.json
conformance/expectations/fintabnet-otsl/: 001_simple.ir.json
conformance/expectations/otsl-1.0.0/: 001_simple.ir.json  002_spans.ir.json  003_empty.ir.json
conformance/expectations/pubtables-1m/: 001_unordered.ir.json
conformance/expectations/pubtabnet-1.0.0/: 001_no_bbox.ir.json
conformance/expectations/pubtabnet-2.0.0/: 001_simple.ir.json  002_complex_spans.ir.json  003_empty_cells.ir.json
conformance/expectations/tablebank/: 001_structure_only.ir.json
conformance/expectations/tableformer/: 001_empty_cell_bbox.ir.json
conformance/samples/doctags-tables/: 001_simple.jsonl
conformance/samples/fintabnet/: 001_simple.jsonl
conformance/samples/fintabnet-otsl/: 001_simple.jsonl
conformance/samples/otsl-1.0.0/: 001_simple.jsonl  002_spans.jsonl  003_empty.jsonl
conformance/samples/pubtables-1m/: 001_unordered.jsonl
conformance/samples/pubtabnet-1.0.0/: 001_no_bbox.jsonl
conformance/samples/pubtabnet-2.0.0/: 001_simple.jsonl  002_complex_spans.jsonl  003_empty_cells.jsonl
conformance/samples/tablebank/: 001_structure_only.jsonl
conformance/samples/tableformer/: 001_empty_cell_bbox.jsonl
conformance/schema/: index.schema.json
docs/: decision-queue.md  format_support.md  glossary.md  handover.md  intent.md  loss_matrix.md  spec.md
docs/adr/: 0001-conformance-suite-in-repo-temporarily.md  0002-codec-writable-flag-for-read-only-codecs.md  0003-e2e-against-docling-otsl-family.md  0004-e2e-native-first-published-datasets.md  0005-port-otsl-reconstruction.md  0006-native-datasets-via-local-download.md  0007-i05-empty-cell-bbox-scope.md  0008-read-parses-validation-is-separate.md  0009-drop-fast-and-validate-extras.md  0010-i05-empty-cell-is-whitespace-content.md  0011-teds-metric-port.md  0012-strict-profile-image-bounds.md  0013-docling-bridge-in-repo-monorepo.md  0014-release-via-oidc-trusted-publishing.md
scripts/: e2e_hf_check.py  gen_format_support.py  gen_loss_matrix.py
src/tablecodec/: __init__.py  _invariants.py  cli.py  io.py  ir.py  loss.py  teds.py  validate.py
src/tablecodec/codecs/: __init__.py  _base.py  _htmltable.py  _otslgrid.py  builtins.py  doctags.py  fintabnet.py  fintabnet_otsl.py  otsl.py  pubtables1m.py  pubtabnet.py  tablebank.py  tableformer.py
tests/: conftest.py  strategies.py  test_cli.py  test_conformance.py  test_invariants.py  test_invariants_hypothesis.py  test_io.py  test_io_streaming.py  test_ir.py  test_loss.py  test_smoke.py  test_spec_surface.py  test_teds.py  test_validate.py
tests/benchmarks/: test_codec_benchmarks.py
tests/codecs/: test_doctags.py  test_fintabnet.py  test_fintabnet_otsl.py  test_otsl.py  test_otsl_to_pubtabnet.py  test_pubtables1m.py  test_pubtabnet.py  test_pubtabnet_v10.py  test_registry.py  test_tablebank.py  test_tableformer.py
tests/fixtures/doctags/: simple_2x2.jsonl  with_span_and_empty.jsonl
tests/fixtures/fintabnet/: simple_2x2.jsonl  with_colspan.jsonl
tests/fixtures/fintabnet_otsl/: simple_2x2.jsonl
tests/fixtures/otsl/: simple_2x2.jsonl  with_2x2_span.jsonl  with_colspan.jsonl  with_empty.jsonl  with_rowspan.jsonl
tests/fixtures/pubtables1m/: simple_2x2.jsonl  with_span.jsonl
tests/fixtures/pubtabnet/: simple_2x2.jsonl  v10_simple_2x2.jsonl  with_empty.jsonl  with_rowspan.jsonl
tests/fixtures/tablebank/: simple_2x2.jsonl  with_rowspan.jsonl
tests/fixtures/tableformer/: empty_with_bbox.jsonl  simple_2x2.jsonl
