[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "tablecodec"
version = "0.0.15"
description = "Neutral Internal Representation and Codec registry for image-based table-recognition datasets"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "hironow", email = "hironow365@gmail.com" },
]
keywords = ["table", "ocr", "dataset", "pubtabnet", "otsl", "doctags", "fintabnet"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
# SPEC §13: Core has zero third-party runtime dependencies.
dependencies = []

[project.urls]
Homepage = "https://github.com/hironow/tablecodec"
Repository = "https://github.com/hironow/tablecodec"
Issues = "https://github.com/hironow/tablecodec/issues"
Changelog = "https://github.com/hironow/tablecodec/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# SPEC §13: optional extras. Each extra activates a specific feature surface.
teds = [
    "apted>=1.0.3",
    "lxml>=5.0",
]
cli = [
    "click>=8.1",
]
# NOTE: the `fast` (orjson) and `validate` (pydantic) extras were dropped
# (see ADR 0009): both would have to run inside the zero-dependency core
# (JSON parsing + IR construction happen in the codecs), which the
# dependency policy (SPEC §13) and `semgrep.yaml` forbid. `teds` stays —
# it is a separate, core-external optional feature.
# Optional: streaming real datasets from the Hugging Face Hub for the
# occasional, local-only e2e check (scripts/e2e_hf_check.py). Not part
# of the library runtime; never imported by the stdlib-only core.
hf = [
    "datasets>=2.19",
    "defusedxml>=0.7",
]
all = [
    "tablecodec[teds,cli,hf]",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-benchmark>=4.0",
    "hypothesis>=6.100",
    "jsonschema>=4.20",
    "ruff>=0.6",
    "pyright>=1.1.380",
    "coverage>=7.5",
]

[project.scripts]
tablecodec = "tablecodec.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tablecodec"]

[tool.hatch.build.targets.sdist]
include = [
    "src/tablecodec",
    "tests",
    "docs/spec.md",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
markers = [
    "slow: tests that take a long time (deselect with '-m \"not slow\"')",
    "benchmark: pytest-benchmark micro-benchmarks (deselect with '-m \"not benchmark\"')",
]
# Default test run skips benchmarks; run with `just bench` to include.
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-m",
    "not benchmark",
]

[tool.coverage.run]
branch = true
source = ["tablecodec"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
