[build-system]
# hatchling >= 1.27 emits PEP 639 / core-metadata 2.4 License-Expression.
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "tablecodec"
version = "0.0.18"
description = "Neutral Internal Representation and Codec registry for image-based table-recognition datasets"
readme = "README.md"
requires-python = ">=3.11"
# PEP 639: SPDX license expression + license-files (NOT the deprecated
# `license = {file = ...}` table form nor a `License ::` classifier).
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "hironow", email = "hironow365@gmail.com" },
]
keywords = ["table", "ocr", "dataset", "pubtabnet", "otsl", "doctags", "fintabnet"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
# SPEC §13: Core has zero third-party runtime dependencies.
dependencies = []

[project.urls]
Homepage = "https://github.com/hironow/tablecodec"
Repository = "https://github.com/hironow/tablecodec"
Issues = "https://github.com/hironow/tablecodec/issues"
Changelog = "https://github.com/hironow/tablecodec/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# SPEC §13: optional extras. Each extra activates a specific feature surface.
teds = [
    "apted>=1.0.3",
    "lxml>=5.0",
]
cli = [
    "click>=8.4.1",
]
# NOTE: the `fast` (orjson) and `validate` (pydantic) extras were dropped
# (see ADR 0009): both would have to run inside the zero-dependency core
# (JSON parsing + IR construction happen in the codecs), which the
# dependency policy (SPEC §13) and the `.semgrep/rules/` forbid. `teds` stays —
# it is a separate, core-external optional feature.
# Optional: streaming real datasets from the Hugging Face Hub for the
# occasional, local-only e2e check (scripts/e2e_hf_check.py). Not part
# of the library runtime; never imported by the stdlib-only core.
hf = [
    "datasets>=2.19",
    "defusedxml>=0.7",
]
all = [
    "tablecodec[teds,cli,hf]",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-benchmark>=4.0",
    "hypothesis>=6.100",
    "jsonschema>=4.20",
    "ruff>=0.6",
    "pyright>=1.1.380",
    "coverage>=7.5",
]

[project.scripts]
tablecodec = "tablecodec.cli:main"

[tool.uv]
# Supply-chain cooldown: pin dependency resolution to distributions uploaded
# before this absolute date, so a compromised-then-yanked release is not pulled
# into uv.lock. MUST be an absolute date, NOT a relative span -- a span makes
# `uv sync --locked` non-deterministic (astral-sh/uv#18775). When merging a
# Dependabot uv update, bump this to that day's date and re-run `uv lock`.
exclude-newer = "2026-06-07T00:00:00Z"

[tool.hatch.build.targets.wheel]
packages = ["src/tablecodec"]

[tool.hatch.build.targets.sdist]
include = [
    "src/tablecodec",
    "tests",
    "docs/spec.md",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
markers = [
    "slow: tests that take a long time (deselect with '-m \"not slow\"')",
    "benchmark: pytest-benchmark micro-benchmarks (deselect with '-m \"not benchmark\"')",
]
# Default test run skips benchmarks; run with `just bench` to include.
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-m",
    "not benchmark",
]

[tool.coverage.run]
branch = true
source = ["tablecodec"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

# Ruff configuration (aligned with the global ruff rules). Kept in pyproject
# rather than a separate ruff.toml so the project has a single config file.
[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
    ".venv",
    "build",
    "dist",
    "htmlcov",
    ".semgrep",  # semgrep rule test fixtures: intentional bad code, not linted
]

[tool.ruff.lint]
select = [
    "FAST", # FastAPI (no-op here, but kept aligned with the global rules)
    "C90",  # mccabe complexity
    "NPY",  # numpy (no-op here)
    "PD",   # pandas (no-op here)
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "DTZ",  # flake8-datetimez
    "T20",  # flake8-print
    "N",    # pep8-naming
    "I",    # isort
    "E",    # pycodestyle errors
    "F",    # Pyflakes
    "PLE",  # Pylint errors
    "PLR",  # Pylint refactor
    "UP",   # pyupgrade
    "FURB", # refurb
    "RUF",  # Ruff-specific
]
extend-ignore = [
    "E501",   # line too long: handled by formatter
    "RUF002", # ambiguous unicode (false positive on Japanese docstrings)
    "RUF003", # ambiguous comments
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "PLR2004", # magic-value-comparison: tests routinely use literal values
    "S101",    # assert is required in pytest
]
"scripts/**/*.py" = [
    "PLR0913", # many-args: the occasional e2e harness adapters/runners take many params
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["tablecodec"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# Pyright configuration (strict). Kept in pyproject rather than a separate
# pyrightconfig.json so the project has a single config file. pyright reads
# [tool.pyright] only when pyrightconfig.json is absent.
[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__", "**/.venv", "build", "dist", "htmlcov"]
pythonVersion = "3.11"
pythonPlatform = "All"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
reportMissingImports = "error"
reportMissingTypeStubs = "warning"
reportUnusedImport = "error"
reportUnusedVariable = "warning"
reportDuplicateImport = "error"
reportImplicitStringConcatenation = "warning"
reportUntypedFunctionDecorator = "error"
reportUnnecessaryTypeIgnoreComment = "warning"
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
